Make sure umlauts/rings aren't clipped for tall characters in headlines

--- a/src/stylesheets/base/page.scss
+++ b/src/stylesheets/base/page.scss
@@ -14,6 +14,8 @@ body {
   flex-direction: column;
   align-items: center;
 
+  overflow-x: hidden;
+
   > * {
     width: 100%;
   }
